Add helper functions to create query filters from view parameters
