# swagger/v1.0.yaml
@@ -37,7 +37,12 @@ paths:
         - Assumptions
       summary: Get a single assumption
       parameters:
-        - $ref: '#/components/parameters/assumption_id'
+        - name: assumption_id
+          description: Assumption unique identifier
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Return assumption
@@ -77,7 +82,12 @@ paths:
         - HUC8
       summary: Get a single HUC8
       parameters:
-        - $ref: '#/components/parameters/huc8_id'
+        - name: huc8_id
+          description: HUC8 number
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Return HUC8
@@ -96,6 +106,11 @@ paths:
       parameters:
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/limit'
+        - $ref: '#/components/parameters/huc8s'
+        - $ref: '#/components/parameters/states'
+        - $ref: '#/components/parameters/practice_code'
+        - $ref: '#/components/parameters/applied_date'
+        - $ref: '#/components/parameters/sunset'
       responses:
         '200':
           description: Return practices
@@ -117,7 +132,12 @@ paths:
         - Practices
       summary: Get a single practice
       parameters:
-        - $ref: '#/components/parameters/practice_id'
+        - name: practice_id
+          description: Practice id
+          in: path
+          required: true
+          schema:
+            type: integer
       responses:
         '200':
           description: Return practice
@@ -157,7 +177,12 @@ paths:
         - States
       summary: Get a single state
       parameters:
-        - $ref: '#/components/parameters/state_id'
+        - name: state_id
+          description: State name
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Return state
@@ -188,34 +213,45 @@ components:
         type: integer
         minimum: 1
         default: 20
-    assumption_id:
-      name: assumption_id
-      description: Assumption unique identifier
-      in: path
-      required: true
+    huc8s:
+      name: huc8s
+      description: HUC8s
+      in: query
+      required: false
+      schema:
+        type: array
+        items:
+          type: string
+    states:
+      name: states
+      description: State names
+      in: query
+      required: false
+      schema:
+        type: array
+        items:
+          type: string
+    practice_code:
+      name: practice_code
+      description: Practice code
+      in: query
+      required: false
       schema:
         type: string
-    huc8_id:
-      name: huc8_id
-      description: HUC8 number
-      in: path
-      required: true
-      schema:
-        type: string
-    practice_id:
-      name: practice_id
-      description: Practice id
-      in: path
-      required: true
+    applied_date:
+      name: applied_date
+      description: Practice applied date
+      in: query
+      required: false
       schema:
         type: integer
-    state_id:
-      name: state_id
-      description: State name
-      in: path
-      required: true
+    sunset:
+      name: sunset
+      description: Practice sunset
+      in: query
+      required: false
       schema:
-        type: string
+        type: integer
 
   schemas:
     Pagination:
